# event_manager

./: .gitignore  CMakeLists.txt  LICENSE  README.md
doc/: index.rst
include/: app_event_manager.h  app_event_manager_priv.h
samples/: CMakeLists.txt  Makefile  README.rst  prj.conf
samples/benchmark_1_to_1/: run.py
samples/benchmark_1_to_1/src/: main.c
samples/benchmark_1_to_1/src/events/: measurement_event.h
samples/benchmark_1_to_many/: prj.conf
samples/benchmark_1_to_many/src/: main.c
samples/benchmark_one_to_many/: CMakeLists.txt  Makefile  README.md  README.rst  benchmark_256KB.robot  event_manager_benchmark_256kb.csv  prj.conf  run.py  sample.yaml
samples/benchmark_one_to_many/src/: main.c
samples/benchmark_one_to_many/src/events/: measurement_event.h
samples/src/: main.c
samples/src/events/: ack_event.c  ack_event.h  config_event.c  config_event.h  control_event.c  control_event.h  measurement_event.c  measurement_event.h
src/: app_event_manager.c  app_event_manager_shell.c
tests/src/: main.c  testcase.yaml
tests/src/events/: data_event.c  data_event.h  multicontext_event.c  multicontext_event.h  order_event.c  order_event.h  sized_events.c  sized_events.h  test_events.c  test_events.h
